[package]
name = "ecs_bench"
version = "0.1.0"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]

[dependencies]
serde_derive = "1.0.104"
serde = "1.0.104"

[dev-dependencies]
ecs = "0.23.1"
rayon = "1.3.0"
specs = "0.16.1"
recs = "2.0.1"
trex = "0.2.0"
calx-ecs = "0.6.1"
froggy = "0.4.4"
constellation = "0.2"
shipyard = "0.4.0"
legion = "0.3.0"
